syntax = "proto3";
package msg;

option go_package = "./msg";

message ShellMessage {
  enum MsgType {
    UNKNOWN = 0;
    ERROR = 1;      // error message
    INPUT = 2;      // input message
    OUTPUT = 3;     // output message
    SIZE = 4;       // resize message
    CONNECT = 5;    // shell connect message
    DISCONNECT = 6; // shell disconnect message
  }
  string sid = 1; // shell conn id
  MsgType type = 2;
  oneof data {
    ShellSizeMessage size = 3;
    ShellConnectMessage connect = 4;
    string error = 5;
    bytes putdata = 6;
  }
}
message ShellSizeMessage {
  uint32 rows = 1; // row
  uint32 cols = 2; // col
  uint32 x = 3;    // x
  uint32 y = 4;    // y
}

message ShellConnectMessage {
  string ID = 1; // agent id
  ShellSizeMessage size = 2;
}
